--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "aws-sdk": "^2.1587.0",
         "cors": "^2.8.5",
         "csv-parser": "^3.0.0",
+        "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "express-graphql": "^0.12.0",
         "graphql": "^15.8.0",
