--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "tut1",
     "version": "1.0.0",
     "description": "",
-    "main": "server.js",
+    "main": "app.js",
     "type": "commonjs",
     "scripts": {
         "start": "nodemon server.js"
